# aurora-beer-reminder

./: .gitignore  LICENSE  meson.build
RPMS/: dev.glazkov.BeerReminder-0.1.0-1.armv7hl.rpm
desktop/: dev.glazkov.BeerReminder.desktop  meson.build
icons/: meson.build
qml/: dev.glazkov.BeerReminder.qml  meson.build
qml/common/: CommonFunctions.qml
qml/pages/: BeerPage.qml  CoverPage.qml  MainPage.qml
rpm/: dev.glazkov.BeerReminder.spec
src/: main.cpp  meson.build
translations/: dev.glazkov.BeerReminder-ru.ts  dev.glazkov.BeerReminder.ts  meson.build
