application_qml_dir = get_option('datadir') / meson.project_name() / 'qml'

install_subdir('common', install_dir: application_qml_dir)
install_subdir('images', install_dir: application_qml_dir)
install_subdir('pages', install_dir: application_qml_dir)

install_data('dev.glazkov.BeerReminder.qml', install_dir: application_qml_dir)
